# jpeg-stages

./: CMakeLists.txt  README.md  bit_reader.cpp  bit_reader.hpp  decode.cpp  decode.hpp  fftw_multi.cpp  huffman.cpp  huffman.hpp  main.cpp
test/unit/: test_bit_reader.cpp
